# sealloc

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  papers_and_reading_materials.md  pyproject.toml  pytest.ini
docs/: ARM_MTE_support.md
include/: sealloc.h  sealloc_api.h
include/api/: sealloc_api.h
include/internal/sealloc/: arena.h  bin.h  chunk.h  generator.h  internal_allocator.h  random.h  size_class.h  utils.h
include/sealloc/: arena.h  bin.h  chunk.h  container_ll.h  generator.h  internal_allocator.h  logging.h  platform_api.h  random.h  run.h  sealloc.h  size_class.h  utils.h
scripts/: generators.py  plot_allocation_stats.py  plot_performance_tests.py
src/: CMakeLists.txt  arena.c  bin.c  chunk.c  container_ll.c  internal_allocator.c  logging.c  malloc_api.c  platform.c  random.c  run.c  sealloc.c  size_class.c  utils.c
src/sealloc/: arena.h  bin.h  chunk.h  container_ll.h  generator.h  internal_allocator.h  logging.h  platform_api.h  random.h  run.h  sealloc.h  size_class.h  utils.h
src/sealloc/arch/: aarch64.h
templates/: generator.j2
test/: CMakeLists.txt  conftest.py  hello_test.cpp  test_arena.cpp  test_bin.cpp  test_chunk.cpp  test_container_ll.cpp  test_e2e.py  test_ia.c  test_ia.cpp  test_ia_2.c  test_ia_3.c  test_ia_4.c  test_performance.py  test_run.cpp  test_run_mte.cpp  test_sealloc.cpp  test_security.py  test_size_class.cpp
test/test_e2e/: arbitrary_free_near.c  double_free_close.c  double_free_far.c  heap_spray_prevention.c  overflow_bigger_alloc_prevention.c  overflow_large_detection.c  overflow_medium.c  overflow_simple_prevention.c  overflow_small_detection.c  randomized_allocations.c  uaf_close.c  uaf_many_no_duplicates.c
test/test_integration/: calloc.cpp  free_huge.cpp  free_invalid.cpp  free_regular.cpp  fuzz_api.cpp  locate_metadata.cpp  malloc_bin_state_correct.cpp  malloc_huge.cpp  malloc_huge_multi.cpp  malloc_memory_integrity.cpp  malloc_multi.cpp  realloc_huge.cpp  realloc_invalid.cpp  realloc_multi.cpp
test/test_sealloc/: calloc.cpp  free_huge.cpp  free_invalid.cpp  free_regular.cpp  fuzz_api.cpp  malloc_huge.cpp  malloc_huge_multi.cpp  malloc_memory_integrity.cpp  malloc_multi.cpp  malloc_single.cpp  realloc_huge.cpp  realloc_invalid.cpp  realloc_multi.cpp  realloc_regular.cpp  test_sealloc_1.cpp  test_sealloc_2.cpp
test/test_security/: arbitrary_free.c  common.h  double_free_hard.c  double_free_simple.c  heap_spray_prevention.c  memory_reuse_hard.c  memory_reuse_simple.c  overflow_hard_detection.c  overflow_hard_prevention.c  overflow_simple_detection.c  overflow_simple_prevention.c  overflow_with_free_prevention.c  randomized_heap_layout.c  uaf_many_no_duplicates.c
test/tests_bin/: test_bin_init.c
test/tests_ia/: test_ia_1.c  test_ia_3.c
test/tests_run/: test_run_allocate.c  test_run_allocate_write_regions.c  test_run_deallocate.c  test_run_deallocate_invalid_medium.c  test_run_deallocate_invalid_small.c  test_run_init.c
